# llm-poker-arena

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/agents/: integration-test-runner.md  root-cause-debugger.md
.github/workflows/: ci.yml
src/llm_poker/: __init__.py  config.py
src/llm_poker/agents/: __init__.py  action_parser.py  poker_agent.py  prompts.py
src/llm_poker/analytics/: __init__.py  elo.py  metrics.py
src/llm_poker/api/: __init__.py  main.py  schemas.py
src/llm_poker/api/routes/: leaderboard.py  matches.py  models.py
src/llm_poker/cli/: __init__.py  main.py
src/llm_poker/engine/: __init__.py  game_state.py  hand_manager.py
src/llm_poker/observability/: __init__.py  logger.py
src/llm_poker/storage/: __init__.py  models.py  repositories.py  schema.sql  supabase_client.py
src/llm_poker/tools/: __init__.py  equity.py  pot_odds.py  registry.py
src/llm_poker/tournament/: __init__.py  blind_structure.py  full_table.py  heads_up.py  round_robin.py
tests/: __init__.py  conftest.py  test_action_parser.py  test_elo.py  test_tools.py
